# ike

./: .gitignore  Cargo.toml  build.rs  rustfmt.toml  shell.nix
cargo-ike/: Cargo.toml
cargo-ike/src/: init.rs  main.rs  run.rs
cargo-ike/template/android/: .gitignore  build.gradle  settings.gradle
cargo-ike/template/android/src/main/: AndroidManifest.xml
cargo-ike/template/android/src/main/java/org/ori/: RustInputConnection.java  RustView.java
examples/: counter.rs  many_buttons.rs  svg.rs  test.rs  todo.rs
examples/android/: AndroidManifest.xml  Cargo.toml  build.gradle
examples/android/android/: build.gradle
examples/mobile/: Cargo.toml
examples/mobile/android/: .gitignore  build.gradle
examples/mobile/android/src/: AndroidManifest.xml
examples/mobile/android/src/main/: AndroidManifest.xml
examples/mobile/android/src/main/java/org/ori/: RustActivity.java  RustInputConnection.java  RustView.java
examples/mobile/src/: lib.rs
ike-android/: Cargo.toml
ike-android/src/: callbacks.rs  context.rs  ime.rs  input.rs  lib.rs  native.rs  window.rs
ike-core/: Cargo.toml
ike-core/src/: axis.rs  border.rs  build.rs  canvas.rs  color.rs  context.rs  debug.rs  event.rs  layout.rs  lib.rs  record.rs  svg.rs  text.rs  transition.rs  widget.rs  window.rs
ike-core/src/app/: focus.rs  key.rs  layout.rs  mod.rs  pointer.rs
ike-core/src/arena/: mod.rs  widget_mut.rs  widget_ref.rs
ike-core/src/draw/: canvas.rs  curve.rs  mod.rs  paint.rs
ike-core/src/event/: mod.rs  pointer.rs  text.rs  touch.rs
ike-core/src/math/: matrix.rs  offset.rs  point.rs  rect.rs  size.rs  space.rs
ike-core/src/passes/: animate.rs  compose.rs  debug.rs  draw.rs  event.rs  focus.rs  hierarchy.rs  key.rs  layout.rs  mod.rs  pointer.rs  propagate.rs  query.rs  record.rs  scroll.rs  text.rs  touch.rs  update.rs
ike-core/src/root/: focus.rs  key.rs  layout.rs  mod.rs  pointer.rs  query.rs  scroll.rs  signal.rs  text.rs  touch.rs
ike-core/src/tree/: mod.rs  widget_mut.rs  widget_ref.rs
ike-core/src/widget/: mod.rs  state.rs
ike-core/src/widgets/: align.rs  button.rs  constrain.rs  container.rs  divider.rs  entry.rs  label.rs  mod.rs  pad.rs  picture.rs  safe_area.rs  scroll.rs  spacer.rs  stack.rs  text_area.rs  transform.rs  zstack.rs
ike-core/src/world/: focus.rs  key.rs  layout.rs  mod.rs  pointer.rs  query.rs  scroll.rs  settings.rs  signal.rs  state.rs  text.rs  touch.rs  widget_mut.rs  widget_ref.rs  widgets.rs
ike-macro/: Cargo.toml
ike-macro/src/: lib.rs
ike-ori/: Cargo.toml
ike-ori/src/: context.rs  lib.rs  palette.rs  resources.rs
ike-ori/src/views/: aligned.rs  button.rs  constrain.rs  container.rs  divider.rs  entry.rs  label.rs  mod.rs  pad.rs  palette.rs  picture.rs  prose.rs  safe_area.rs  scroll.rs  spacer.rs  stack.rs  text.rs  transform.rs  window.rs  zstack.rs
ike-skia/: Cargo.toml
ike-skia/src/: canvas.rs  lib.rs  painter.rs  vulkan.rs
ike-winit/: Cargo.toml
ike-winit/src/: key.rs  lib.rs  proxy.rs
src/: app.rs  border.rs  build.rs  canvas.rs  color.rs  context.rs  key.rs  lib.rs  painter.rs  palette.rs  pointer.rs  reload.rs  skia.rs  text.rs  transition.rs  tree.rs  view.rs  widget.rs  window.rs  winit.rs
src/android/: callbacks.rs  context.rs  ime.rs  input.rs  log.rs  mod.rs  window.rs
src/app/: animate.rs  draw.rs  focus.rs  key.rs  layout.rs  mod.rs  pointer.rs  scroll.rs  update.rs
src/math/: matrix.rs  mod.rs  offset.rs  point.rs  rect.rs  size.rs  space.rs  vector.rs
src/tree/: mod.rs  widget_mut.rs  widget_ref.rs
src/views/: aligned.rs  button.rs  constrain.rs  container.rs  entry.rs  label.rs  mod.rs  pad.rs  picture.rs  prose.rs  scroll.rs  stack.rs  text_area.rs  window.rs
src/widgets/: align.rs  button.rs  constrain.rs  container.rs  entry.rs  label.rs  mod.rs  picture.rs  scroll.rs  stack.rs  text.rs  text_area.rs
src/winit/: context.rs  mod.rs
