[package]
name = "ike"
version = "0.1.0"
edition.workspace = true

[workspace]
members = ["ike-core", "ike-skia"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
ike-core = { path = "ike-core" }
ike-skia = { path = "ike-skia" }

[features]
default = []
reload = ["dep:libloading", "dep:rand", "dep:json"]

[dependencies]
ike-core.workspace = true
ike-skia.workspace = true

[dependencies.ori]
git = "https://github.com/ori-ui/ori"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

[dependencies.winit]
version = "0.30"
default-features = false
features = [
  "wayland",
  "wayland-dlopen",
  "x11",
  "rwh_06",
]

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies.copypasta]
version = "0.10"

[dependencies.libloading]
version = "0.9"
optional = true

[dependencies.rand]
version = "0.9"
optional = true

[dependencies.json]
version = "0.12"
optional = true

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

