[package]
name = "ike"
version.workspace = true
authors.workspace = true
edition.workspace = true

[workspace]
members = [
  "ike-android",
  "ike-core",
  "ike-macro",
  "ike-ori",
  "ike-skia",
  "ike-winit",
  "cargo-ike",
  "examples/*", 
]

[workspace.package]
version = "0.1.0"
authors = ["Ori developers"]
edition = "2024"

[workspace.dependencies]
ike-android = { path = "ike-android" }
ike-core    = { path = "ike-core"    }
ike-macro   = { path = "ike-macro"   }
ike-ori     = { path = "ike-ori"     }
ike-skia    = { path = "ike-skia"    }
ike-winit   = { path = "ike-winit"   }
ike         = { path = "."           }

[workspace.dependencies.ori]
#git = "https://github.com/ori-ui/ori"
path = "../ori"

[workspace.dependencies.tokio]
version = "1"

[workspace.dependencies.tracing]
version = "0.1"

[workspace.dependencies.thiserror]
version = "2"

[workspace.dependencies.tracing-subscriber]
version = "0.3"

[features]
default = ["winit"]

winit = ["dep:ike-winit"]

[dependencies]
ike-core  = { workspace = true }
ike-macro = { workspace = true }
ike-ori   = { workspace = true }
ike-skia  = { workspace = true }
ori       = { workspace = true }
tracing   = { workspace = true }
thiserror = { workspace = true }


[target.'cfg(any(all(target_family = "unix", not(target_os = "android")), target_os = "macos", target_os = "windows"))'.dependencies]
ike-winit = { workspace = true, optional = true }

[target.'cfg(target_os = "android")'.dependencies]
ike-android = { workspace = true }

[dependencies.tracing-subscriber]
workspace = true
features = ["env-filter"]
